# xforge-cli

./: .env.example  .gitignore  README.md  pyproject.toml
src/xforge/: __init__.py  main.py
src/xforge/agent/: orchestrator.py
src/xforge/context/: manager.py
src/xforge/router/: gating.py
src/xforge/ui/: app.py
